--- a/CHANGELOG
+++ b/CHANGELOG
@@ -6,3 +6,5 @@
  ✔ v0.2 @done (16-05-19 15:44)
    ✔ insert pandas DataFrame into table @done (16-05-19 15:44)
    ✔ unify query methods @done (16-05-19 15:44)
+ ✔ v0.2.1 @done (16-05-19 19:40)
+   ✔ access to external database @done (16-05-19 19:40)
