--- a/TODO
+++ b/TODO
@@ -1,8 +1,8 @@
 # feature request  vs tasks to do
  ✔ basic setup of the repository tree @done (16-05-18 23:29)
  ✔ usable & stable version @done (16-05-19 15:49)
+ ✔ setup CI configuration with travis @done (16-08-02 15:53)
  ☐ add tests
- ☐ setup CI configuration with travis
  ☐ allow coverage report
  ☐ write the docstrings for all functions
  ☐ write a properly readme.md with gifs showing the basic usage
