--- a/TODO
+++ b/TODO
@@ -7,3 +7,4 @@
  ☐ write the docstrings for all functions
  ☐ write a properly readme.md with gifs showing the basic usage
  ☐ add error treatment for all functions
+ ☐ update changelog
